--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "code/index.js",
   "type": "module",
   "scripts": {
     "test": "jest --coverage",
