--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "main": "src/index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "test": "jest" ,
-     "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --coverage --coverageReporters lcov"
   },
+  "author": "",
+  "license": "ISC",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "commander": "13.1.0",
+    "commander": "^12.1.0",
+
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
-    "eslint": "^9.20.1",
-    "globals": "^15.15.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.5.0",
     "jest": "^29.7.0"
   }
 }
