--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "jest --coverage --coverageReporters lcov"
+    "test": "jest --coverage --coverageReporters=lcov"
   },
   "author": "",
   "license": "ISC",
